<resources>
    <string name="app_name">Lab01</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_click">Click</string>
    <string name="unknown_username">User name not known.</string>
    <string name="go_get_it">Go get it</string>
    <string name="title_activity_hello">Hello</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="started_from">This activity has been called by</string>
</resources>
